add recipe for Silver Alloy Coil

--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -382,7 +382,7 @@ metaitem.lithium_foam_base.name=Lithium Foam Base
 metaitem.alumino_silicate_wool_sheet.name=Alumino Silicate Wool Sheet
 metaitem.chromatic_glass_fiber.name=Chromatic Glass Fiber
 metaitem.saturated_chromatic_glass_fiber.name=Saturated Chromatic Glass Fiber
-
+metaitem.sintered_silver_coil.name=Sintered Silver Coil
 
 
 #Materials
