--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -389,45 +389,45 @@ metaitem.sintered_silver_coil.name=Sintered Silver Coil
 
 
 
-gregtech.material.manganese_sulfate.name=Manganese Sulfate
-gregtech.material.rhodocrosite.name=Rhodocrosite
-gregtech.material.cassiterite_coke_pellets.name=Cassiterite Coke Pellets
-gregtech.material.tin_slag.name=Tin Slag
-gregtech.material.nb_ta_containing_dust.name=Niobium Tantalum Containing Dust
-gregtech.material.niobium_tantalum_dust.name=Niobium Tantalum Dust
-gregtech.material.aluminium_trifluoride.name=Aluminium Trifluoride
-gregtech.material.silicon_fluoride.name=Silicon Fluoride
-gregtech.material.nb_ta_fluoride_mix.name=Niobium Tantalum Fluoride
-gregtech.material.barium_oxide.name=Barium Oxide
-gregtech.material.barium_peroxide.name=Barium Peroxide
-gregtech.material.columbite.name=Columbite
-gregtech.material.fused_columbite.name=Fused Columbite
-gregtech.material.columbite_minor_oxide_residue.name=Columbite Minor Oxide Residue
-gregtech.material.leached_columbite.name=Leached Columbite
-gregtech.material.iron_sulfate.name=Iron Sulfate
-gregtech.material.sodium_sulfate.name=Sodium Sulfate
-gregtech.material.tantalite_minor_oxide_residue.name=Tantalite Minor Oxide Residue
-gregtech.material.fluoroniobic_acid.name=Fluoroniobic Acid
-gregtech.material.fused_tantalite.name=Fused Tantalite
-gregtech.material.leached_tantalite.name=Leached Tantalite
-gregtech.material.cubic_zirconia.name=Cubic Zirconia
-gregtech.material.acidic_leached_pyrochlore.name=Acidic Leached Pyrochlore
-gregtech.material.leached_pyrochlore.name=Leached Pyrochlore
-gregtech.material.potassium_fluoro_niobate.name=Potassiumfluoroniobiate
-gregtech.material.fluorotantalic_acid.name=Fluorotantalic Acid
-gregtech.material.tributyl_phosphate.name=Tributyl Phosphate
-gregtech.material.methyl_isobutyl_ketone.name=Methyl Isobutyl Ketone
-gregtech.material.nb_ta_separation_mixture.name=Niobium Tantalum Separation Mixture
-gregtech.material.heptafluoro_tantalite.name=Heptafluorotantalite
-gregtech.material.oxypentafluoro_niobate.name=Oxypentafluoroniobiate
-gregtech.material.potassium_fluoro_tantalite.name=Potassiumfluorotantalite
+gregtech.material.manganese_sulfate=Manganese Sulfate
+gregtech.material.rhodocrosite=Rhodocrosite
+gregtech.material.cassiterite_coke_pellets=Cassiterite Coke Pellets
+gregtech.material.tin_slag=Tin Slag
+gregtech.material.nb_ta_containing_dust=Niobium Tantalum Containing Dust
+gregtech.material.niobium_tantalum_dust=Niobium Tantalum Dust
+gregtech.material.aluminium_trifluoride=Aluminium Trifluoride
+gregtech.material.silicon_fluoride=Silicon Fluoride
+gregtech.material.nb_ta_fluoride_mix=Niobium Tantalum Fluoride
+gregtech.material.barium_oxide=Barium Oxide
+gregtech.material.barium_peroxide=Barium Peroxide
+gregtech.material.columbite=Columbite
+gregtech.material.fused_columbite=Fused Columbite
+gregtech.material.columbite_minor_oxide_residue=Columbite Minor Oxide Residue
+gregtech.material.leached_columbite=Leached Columbite
+gregtech.material.iron_sulfate=Iron Sulfate
+gregtech.material.sodium_sulfate=Sodium Sulfate
+gregtech.material.tantalite_minor_oxide_residue=Tantalite Minor Oxide Residue
+gregtech.material.fluoroniobic_acid=Fluoroniobic Acid
+gregtech.material.fused_tantalite=Fused Tantalite
+gregtech.material.leached_tantalite=Leached Tantalite
+gregtech.material.cubic_zirconia=Cubic Zirconia
+gregtech.material.acidic_leached_pyrochlore=Acidic Leached Pyrochlore
+gregtech.material.leached_pyrochlore=Leached Pyrochlore
+gregtech.material.potassium_fluoro_niobate=Potassiumfluoroniobiate
+gregtech.material.fluorotantalic_acid=Fluorotantalic Acid
+gregtech.material.tributyl_phosphate=Tributyl Phosphate
+gregtech.material.methyl_isobutyl_ketone=Methyl Isobutyl Ketone
+gregtech.material.nb_ta_separation_mixture=Niobium Tantalum Separation Mixture
+gregtech.material.heptafluoro_tantalite=Heptafluorotantalite
+gregtech.material.oxypentafluoro_niobate=Oxypentafluoroniobiate
+gregtech.material.potassium_fluoro_tantalite=Potassiumfluorotantalite
 
-gregtech.material.yttrium_oxide.name=Yttrium Oxide
-gregtech.material.erbium_oxide.name=Erbium Oxide
-gregtech.material.dysprosium_oxide.name=Dysprosium Oxide
-gregtech.material.scandium_oxide.name=Scandium Oxide
-gregtech.material.cerium_oxide.name=Cerium Oxide
-gregtech.material.tin_four_chloride.name=Tin IV Chloride
+gregtech.material.yttrium_oxide=Yttrium Oxide
+gregtech.material.erbium_oxide=Erbium Oxide
+gregtech.material.dysprosium_oxide=Dysprosium Oxide
+gregtech.material.scandium_oxide=Scandium Oxide
+gregtech.material.cerium_oxide=Cerium Oxide
+gregtech.material.tin_four_chloride=Tin IV Chloride
 gregtech.material.rarer_earth_mixture=Rarer Earth Mixture
 gregtech.material.purified_kevlar_concentrate=Purified Kevlar Concentrate
 gregtech.material.purified_scandium_leach_residues=Purified Scandium Leach Residues
