Finish up NiTa Line

--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -421,7 +421,7 @@ gregtech.material.nb_ta_separation_mixture=Niobium Tantalum Separation Mixture
 gregtech.material.heptafluoro_tantalite=Heptafluorotantalite
 gregtech.material.oxypentafluoro_niobate=Oxypentafluoroniobiate
 gregtech.material.potassium_fluoro_tantalite=Potassiumfluorotantalite
-
+gregtech.material.phosphorus_oxychloride=Phosphorus Oxychloride
 gregtech.material.yttrium_oxide=Yttrium Oxide
 gregtech.material.erbium_oxide=Erbium Oxide
 gregtech.material.dysprosium_oxide=Dysprosium Oxide
