--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -387,6 +387,43 @@ metaitem.sintered_silver_coil.name=Sintered Silver Coil
 
 #Materials
 
+gregtech.material.cobalt_sulfide=Cobalt Sulfide
+gregtech.material.nickel_sulfide=Nickel Sulfide
+gregtech.material.oxidized_ortho_xylene_mixture=Oxidized Ortho-Xylene Mixture
+gregtech.material.cooled_ortho_xylene_mixture=Cooled Ortho-Xylene Mixture
+gregtech.material.diluted_acetone=Diluted Acetone
+gregtech.material.acetone_solution=Acetone Solution
+gregtech.material.ammonia_sulfate_solution=Realgar Solution
+gregtech.material.uranyl_sulfide=Uranyl Sulfide
+gregtech.material.uraninite_extract=Uraninite Extract
+gregtech.material.uranium_extraction_mixture=Uranium Extraction Mixture
+gregtech.material.pitchblende_slurry=Pitchblende Slurry
+gregtech.material.sodium_isopropyl_xanthate=Sodium Isopropyl Xanthate
+gregtech.material.impure_pitchblende_slurry=Impure Pitchblende Slurry
+gregtech.material.ammonia_metal_sulfuric_solution=Ammonia Metal Sulfuric Solution
+gregtech.material.sodium_arsenate_sulfuric_solution=Sodium Arsenate Sulfuric Solution
+gregtech.material.nickel_sulfuric_solution=Nickel Sulfuric Solution
+gregtech.material.copper_sulfide_solution=Copper Sulfide Solution
+gregtech.material.desulfurized_molten_galena=Desulfurized Molten Galena
+gregtech.material.molten_oxidized_galena=Molten Oxidized Galena
+gregtech.material.molten_galena=Molten Galena
+gregtech.material.realgar_solution=Realgar Solution
+gregtech.material.uranium_dioxide=Roasted Bornite
+gregtech.material.uranium_residues=Uranium Residues
+gregtech.material.uranium_metallic_powder=Uranium Metallic Powder
+gregtech.material.lead_metallic_powder=Lead Metallic Powder
+gregtech.material.uranium_thorium_filtrate=Uranium-Thorium Filtrate
+gregtech.material.pitchblende_filtrate=Pitchblende Filtrate
+gregtech.material.nickel_sulfate_precipitate=Nickel Sulfate Precipitate
+gregtech.material.sodium_iodide=Sodium Iodide
+gregtech.material.nickel_rare_residue=Nickel Rare Residues
+gregtech.material.sodium_iodate=Sodium Iodate
+gregtech.material.copper_sulfide=Copper Sulfide
+gregtech.material.arsenic_hydroxide=Arsenic Hydroxide
+gregtech.material.recrystallized_realgar=Recrystallized Realgar
+gregtech.material.sintered_malachite_slag=Sintered Malachite Slag
+gregtech.material.malachite_slag=Malachite Slag
+gregtech.material.vanadium_pentoxide=Vanadium Pentoxide
 gregtech.material.roasted_bornite=Roasted Bornite
 gregtech.material.sodium_carbonate_solution=Sodium Carbonate Solution
 gregtech.material.sodium_chromate_solution=Sodium Chromate Solution
