--- a/src/main/resources/assets/gtb/lang/en_us.lang
+++ b/src/main/resources/assets/gtb/lang/en_us.lang
@@ -1,6 +1,7 @@
 #Ore Prefixes
 
 item.material.oreprefix.sifted=Sifted %s Dust
+item.material.oreprefix.floated=Floated %s Dust
 
 # Blocks
 tile.gtb_multiblock_active_casing.high_energy_coil.name=High Energy Coil
@@ -22,8 +23,8 @@ tile.gtb_wire_coil.pikyonium.name=Pikyonium Coil Block
 tile.gtb_wire_coil.comsic_neutronium.name=Cosmic Neutronium Coil Block
 tile.gtb_wire_coil.infinity.name=Infinity Coil Block
 tile.gtb_wire_coil.eternal.name=Eternal Coil Block
-tile.gtb_wire_coil_2.temporally_constrained_anti_matter.name=Temporally Constrained Anti-Matter Coil Block
-tile.gtb_wire_coil_2.cataclysm_induced_mixed_matter.name=Cataclysm Induced Mixed-Matter Coil Block
+tile.gtb_wire_coil.temporally_constrained_anti_matter.name=Temporally Constrained Anti-Matter Coil Block
+tile.gtb_wire_coil.cataclysm_induced_mixed_matter.name=Cataclysm Induced Mixed-Matter Coil Block
 tile.gtb_multiblock_casing.basic_structural_casing.name=Basic Structural Casing
 tile.crucible.boron_nitride_crucible.name=Boron Nitride Crucible
 tile.crucible.graphite_crucible.name=Graphite Crucible
@@ -381,16 +382,40 @@ metaitem.coolant_cell.name=Coolant Cell
 metaitem.nak_coolant_cell.name=NaK Coolant Cell
 metaitem.uva_halide_lamp.name=UVA Halide Lamp
 metaitem.uva_lamp_core.name=UVA Lamp Core
-metaitem.rotarry_spinning_whisker.name=Rotarry Spinning Whisker
+metaitem.rotarry_spinning_whisker.name=Rotary Spinning Whisker
 metaitem.lithium_foam_base.name=Lithium Foam Base
 metaitem.alumino_silicate_wool_sheet.name=Alumino Silicate Wool Sheet
 metaitem.chromatic_glass_fiber.name=Chromatic Glass Fiber
 metaitem.saturated_chromatic_glass_fiber.name=Saturated Chromatic Glass Fiber
 metaitem.sintered_silver_coil.name=Sintered Silver Coil
+metaitem.vacuum_tube_components.name=Vacuum Tube Components
+metaitem.thick_film_wafer.name=Thick Film Wafer
+metaitem.thick_film_resistor_base_wafer.name=Thick Film Resistor Base Wafer
+metaitem.thick_film_resistor_wafer.name=Thick Film Resistor Wafer
+metaitem.aluminium_capacitor.name=Aluminium Capacitor
+metaitem.transisot_wafer.name=Transistor Wafer
+metaitem.patterend_silicon_dioxide_wafer.name=Patterned Silicon Dioxide Wafer
+metaitem.inductor_lithography_mask.name=Inductor Lithography Mask
+metaitem.etched_inductor_wafer.name=Etched Inductor Wafer
+metaitem.inductor_wafer.name=Inductor Wafer
+metaitem.reinforced_base_wafer.name=Reinforced Base Wafer
+metaitem.patterened_base_wafer.name=Patterned Base Wafer
+metaitem.diode_wafer.name=Diode Wafer
+metaitem.transistor_base_wafer.name=Transistor Base Wafer
+metaitem.capacitor_roll.name=Capacitor Roll
+metaitem.patterened_epoxy_board.name=Patterned Epoxy Board
+metaitem.engraved_epoxy_board.name=Engraved Epoxy Board
+metaitem.laminated_epoxy_board.name=Laminated Epoxy Board
+metaitem.patterened_phenol_circuit_board.name=Patterned Phenolic Board
 
 
 #Materials
 
+
+gregtech.material.epoxid_pcb_base=Epoxid Circuit Board Base
+gregtech.material.sodium_bisulfate_solution=Sodium Bisulfate Solution
+gregtech.material.tantalite_slurry=Tantalite Slurry
+gregtech.material.impure_tantalite_slurry=Impure Tantalite Slurry
 gregtech.material.uranium_solution=Uranium Solution
 gregtech.material.thorium_phosphate_cake_solution=Thorium Phosphate Cake Solution
 gregtech.material.alumina=Alumin
